Specify group os-apply-config for config resources
This will indicate to os-collect-config that this config
resource represents os-apply-config configuration data,
so it can only write out top-level config files for
os-apply-config data (or Heat::Ungrouped for backwards
compatibility).

Change-Id: I3552fdd6df8106ab83cfd17d5f4b137cf33fbc36
Related-Bug: #1299109

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -34,6 +34,7 @@ Resources:
   BlockStorageConfig:
     Type: OS::Heat::StructuredConfig
     Properties:
+      group: os-apply-config
       config:
         admin-password: {Ref: AdminPassword}
         keystone:
