--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -2,6 +2,7 @@ Resources:
   NovaComputeConfig:
     Type: OS::Heat::StructuredConfig
     Properties:
+      group: os-apply-config
       config:
         nova:
           compute_driver: { get_input: nova_compute_driver }
@@ -48,4 +49,5 @@ Resources:
   NovaComputePassthrough:
     Type: OS::Heat::StructuredConfig
     Properties:
+      group: os-apply-config
       config: {get_input: passthrough_config}
