--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -303,6 +303,7 @@ Resources:
   controllerConfig:
     Type: OS::Heat::StructuredConfig
     Properties:
+      group: os-apply-config
       config:
         completion-signal: {get_input: deploy_signal_id}
         admin-password:
@@ -409,6 +410,7 @@ Resources:
   controllerPassthrough:
     Type: OS::Heat::StructuredConfig
     Properties:
+      group: os-apply-config
       config: {get_input: passthrough_config}
   controller0:
     Type: OS::Nova::Server
