--- a/ssl-source.yaml
+++ b/ssl-source.yaml
@@ -14,6 +14,7 @@ Resources:
   SSLConfig:
     Type: OS::Heat::StructuredConfig
     Properties:
+      group: os-apply-config
       config:
         stunnel:
           cert:
