--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -2,6 +2,7 @@ Resources:
   SwiftConfig:
     Type: OS::Heat::StructuredConfig
     Properties:
+      group: os-apply-config
       config:
         swift:
           devices: { get_input: swift_devices }
