Add NeutronControlPlaneID parameter
Creation of OS::Neutron::Port requires network_id parameter
OS::Neutron::Port will be used for VIP creation

Creating port for network by name, e.g:
neutron port-create ctlplane
works only with neutron cli

Change-Id: Ia8bd6f700a4897efd277fd67189d2e04ad716b87

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -163,6 +163,10 @@ Parameters:
     Default: ''
     Description: If set, the public interface is a vlan with this device as the raw device.
     Type: String
+  NeutronControlPlaneID:
+    Default: ''
+    Type: String
+    Description: Neutron ID for ctlplane network.
   NeutronDnsmasqOptions:
     Default: 'dhcp-option-force=26,1400'
     Description: Dnsmasq options for neutron-dhcp-agent. The default value here forces MTU to be set to 1400 to account for the gre tunnel overhead.
