Move to software-config for the undercloud.
Change the undercloud deployment to use software-config similar to
that used by the overcloud.

Change-Id: I81bced2062e461fe10301969d856d709c0b573c3

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -117,183 +117,94 @@ Resources:
       length: 20
       salt:
         Ref: RabbitCookieSalt
-  AccessPolicy:
-    Properties:
-      AllowedResources:
-      - undercloudConfig
-    Type: OS::Heat::AccessPolicy
-  controller0Key:
-    Properties:
-      UserName:
-        Ref: User
-    Type: AWS::IAM::AccessKey
-  controller0CompletionCondition:
-    Type: AWS::CloudFormation::WaitCondition
-    DependsOn: undercloud
-    Properties:
-      Handle: {Ref: controller0CompletionHandle}
-      Count: '1'
-      Timeout: '1800'
-  controller0CompletionHandle:
-    Type: AWS::CloudFormation::WaitConditionHandle
-  User:
-    Properties:
-      Policies:
-      - Ref: AccessPolicy
-    Type: AWS::IAM::User
   undercloudConfig:
-    Type: AWS::AutoScaling::LaunchConfiguration
+    Type: OS::Heat::StructuredConfig
     Properties:
-      ImageId: '0'
-      InstanceType: foo
-    Metadata:
-      OpenStack::Role: undercloudConfig
-      OpenStack::Heat::Stack: {}
-      OpenStack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
-      admin-password:
-        Ref: AdminPassword
-      admin-token:
-        Ref: AdminToken
-      bootstrap_host:
-        bootstrap_nodeid:
-          Fn::Select:
-          - 0
-          - Fn::Select:
+      config:
+        completion-signal: {get_input: deploy_signal_id}
+        admin-password:
+          Ref: AdminPassword
+        admin-token:
+          Ref: AdminToken
+        bootstrap_host:
+          bootstrap_nodeid:
+            Fn::Select:
             - 0
-            - Merge::Map:
-                undercloud:
-                - Fn::Select:
-                  - name
-                  - Fn::GetAtt:
-                    - undercloud
-                    - show
-        nodeid:
-          Fn::Select:
-          - name
-          - Fn::GetAtt:
-            - undercloud
-            - show
-      controller-address:
-        Fn::Select:
-          - 0
-          - Fn::Select:
-            - "ctlplane"
-            - Fn::GetAtt:
-              - undercloud
-              - networks
-      ceilometer:
-        db: mysql://ceilometer:unset@localhost/ceilometer
-        metering_secret: {Ref: CeilometerMeteringSecret}
-        snmpd_readonly_user_name:
-          Ref: SnmpdReadonlyUserName
-        snmpd_readonly_user_password:
-          Ref: SnmpdReadonlyUserPassword
-        service-password:
-          Ref: CeilometerPassword
-      cinder:
-        db: mysql://cinder:unset@localhost/cinder
-        volume_size_mb:
-          Ref: CinderLVMLoopDeviceSize
-      completion-handle:
-        Ref: controller0CompletionHandle
-      db-password: unset
-      glance:
-        backend: file
-        db: mysql://glance:unset@localhost/glance
-        host: 127.0.0.1
-        service-password:
-          Ref: GlancePassword
-        notifier-strategy:
-          Ref: GlanceNotifierStrategy
-        log-file:
-          Ref: GlanceLogFile
-      heat:
-        admin_password:
-          Ref: HeatPassword
-        admin_tenant_name: service
-        admin_user: heat
-        auth_encryption_key: unset___________
-        db: mysql://heat:unset@localhost/heat
-        stack_domain_admin_password: {Ref: HeatStackDomainAdminPassword}
-        watch_server_url:
-          Fn::Join:
-            - ''
-            - - http://
-              - Fn::Select:
-                  - 0
+            - Fn::Select:
+              - 0
+              - Merge::Map:
+                  undercloud:
                   - Fn::Select:
-                    - "ctlplane"
+                    - name
                     - Fn::GetAtt:
                       - undercloud
-                      - networks
-              - ":8003"
-        metadata_server_url:
-          Fn::Join:
-            - ''
-            - - http://
-              - Fn::Select:
-                  - 0
-                  - Fn::Select:
-                    - "ctlplane"
-                    - Fn::GetAtt:
-                      - undercloud
-                      - networks
-              - ":8000"
-        waitcondition_server_url:
-          Fn::Join:
-            - ''
-            - - http://
-              - Fn::Select:
-                  - 0
-                  - Fn::Select:
-                    - "ctlplane"
-                    - Fn::GetAtt:
-                      - undercloud
-                      - networks
-              - ":8000/v1/waitcondition"
-      os-collect-config:
-        cfn:
-          access_key_id:
-            Ref: controller0Key
-          path: undercloudConfig.Metadata
-          secret_access_key:
+                      - show
+          nodeid: {get_input: bootstack_nodeid}
+        controller-address:
+          get_input: controller_host
+        ceilometer:
+          db: mysql://ceilometer:unset@localhost/ceilometer
+          metering_secret: {Ref: CeilometerMeteringSecret}
+          snmpd_readonly_user_name:
+            Ref: SnmpdReadonlyUserName
+          snmpd_readonly_user_password:
+            Ref: SnmpdReadonlyUserPassword
+          service-password:
+            Ref: CeilometerPassword
+        db-password: unset
+        glance:
+          backend: file
+          db: mysql://glance:unset@localhost/glance
+          host: 127.0.0.1
+          service-password:
+            Ref: GlancePassword
+          notifier-strategy:
+            Ref: GlanceNotifierStrategy
+          log-file:
+            Ref: GlanceLogFile
+        heat:
+          admin_password:
+            Ref: HeatPassword
+          admin_tenant_name: service
+          admin_user: heat
+          auth_encryption_key: unset___________
+          db: mysql://heat:unset@localhost/heat
+          stack_domain_admin_password: {Ref: HeatStackDomainAdminPassword}
+          watch_server_url: {get_input: heat.watch_server_url}
+          metadata_server_url: {get_input: heat.metadata_server_url}
+          waitcondition_server_url: {get_input: heat.waitcondition_server_url}
+        keystone:
+          db: mysql://keystone:unset@localhost/keystone
+          host: 127.0.0.1
+        mysql:
+          innodb_buffer_pool_size: {Ref: MysqlInnodbBufferPoolSize}
+        neutron:
+          host: 127.0.0.1
+          ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
+          ovs:
+            public_interface:
+              Ref: NeutronPublicInterface
+            physical_bridge: br-ctlplane
+            physical_network: ctlplane
+            network_vlan_ranges: ctlplane
+            bridge_mappings: ctlplane:br-ctlplane
+            tenant_network_type: vlan
+            enable_tunneling: 'False'
+          service-password:
+            Ref: NeutronPassword
+        rabbit:
+          host: 127.0.0.1
+          username:
+            Ref: RabbitUserName
+          password:
+            Ref: RabbitPassword
+          cookie:
             Fn::GetAtt:
-            - controller0Key
-            - SecretAccessKey
-          stack_name:
-            Ref: AWS::StackName
-      keystone:
-        db: mysql://keystone:unset@localhost/keystone
-        host: 127.0.0.1
-      mysql:
-        innodb_buffer_pool_size: {Ref: MysqlInnodbBufferPoolSize}
-      neutron:
-        host: 127.0.0.1
-        ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
-        ovs:
-          public_interface:
-            Ref: NeutronPublicInterface
-          physical_bridge: br-ctlplane
-          physical_network: ctlplane
-          network_vlan_ranges: ctlplane
-          bridge_mappings: ctlplane:br-ctlplane
-          tenant_network_type: vlan
-          enable_tunneling: 'False'
-        service-password:
-          Ref: NeutronPassword
-      ntp:
-        servers:
+            - RabbitCookie
+            - value
+        ntp:
+          servers:
             - {server: {Ref: NtpServer}, fudge: "stratum 0"}
-      rabbit:
-        host: 127.0.0.1
-        username:
-          Ref: RabbitUserName
-        password:
-          Ref: RabbitPassword
-        cookie:
-          Fn::GetAtt:
-          - RabbitCookie
-          - value
   undercloud:
     Type: OS::Nova::Server
     Properties:
@@ -305,15 +216,42 @@ Resources:
         Ref: KeyName
       image_update_policy:
         Ref: ImageUpdatePolicy
-    Metadata:
-      os-collect-config:
-        cfn:
-          access_key_id:
-            Ref: controller0Key
-          path: undercloudConfig.Metadata
-          secret_access_key:
-            Fn::GetAtt:
-            - controller0Key
-            - SecretAccessKey
-          stack_name:
-            Ref: AWS::StackName
+      user_data_format: SOFTWARE_CONFIG
+  99_undercloudDeployment:
+    Type: OS::Heat::StructuredDeployment
+    Properties:
+      config: {Ref: undercloudConfig}
+      server: {Ref: undercloud}
+      input_values:
+        bootstack_nodeid:
+          Fn::Select:
+            - name
+            - Fn::GetAtt:
+              - undercloud
+              - show
+        controller_host:
+          Fn::Select:
+            - 0
+            - Fn::Select:
+              - ctlplane
+              - Fn::GetAtt:
+                - undercloud
+                - networks
+        heat.watch_server_url:
+          Fn::Join:
+            - ''
+            - - 'http://'
+              - {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { "Fn::GetAtt": [ undercloud, networks ]}]]}
+              - ':8003'
+        heat.metadata_server_url:
+          Fn::Join:
+            - ''
+            - - 'http://'
+              - {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { "Fn::GetAtt": [ undercloud, networks ]}]]}
+              - ':8000'
+        heat.waitcondition_server_url:
+          Fn::Join:
+            - ''
+            - - 'http://'
+              - {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { "Fn::GetAtt": [ undercloud, networks ]}]]}
+              - ':8000/v1/waitcondition'
