Defer to element mysql.innodb_buffer_pool_size
Choosing 100MB here is not a production default. We also don't need two
places with the default value set. The closer a default is to the actual
usage of it, the better, so we'll set 0 here, which will defer to the
default in the element.

Change-Id: I1b41b604286245c2fb83249778db835253c02fc5

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -221,9 +221,12 @@ Parameters:
     Description: The image ID for live-updates to the overcloud compute nodes.
     Default: ''
   MysqlInnodbBufferPoolSize:
-    Description: Specifies the size of the buffer pool in megabytes.
+    Description: >
+        Specifies the size of the buffer pool in megabytes. Setting to
+        zero should be interpreted as "no value" and will defer to the
+        lower level default.
     Type: Number
-    Default: 100
+    Default: 0
 Resources:
   RabbitCookie:
     Type: OS::Heat::RandomString
