--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -95,9 +95,12 @@ Parameters:
     Default: ''
     NoEcho: true
   MysqlInnodbBufferPoolSize:
-    Description: Specifies the size of the buffer pool in megabytes.
+    Description: >
+        Specifies the size of the buffer pool in megabytes. Setting to
+        zero should be interpreted as "no value" and will defer to the
+        lower level default.
     Type: Number
-    Default: 100
+    Default: 0
 Resources:
   RabbitCookie:
     Type: OS::Heat::RandomString
