Sequence deploys - compute after control plane.
The control plane has to be up before the compute deployments can
work. By sequencing these we permit stopping the o-r-c scripts in
the overcloud rather than trying and failing to configure things.

It also reduces the total deploy time by front loading control
plane configuration - Heat has some sequence code which prevents
parallel instantiation on deployments, and the control plane bring
up is critical path for deploying OpenStack.

Change-Id: I0bb2f8ab41c4af1443af60f7547673d495e4e0fb

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -162,6 +162,7 @@ Resources:
       key_name: {Ref: KeyName}
       user_data_format: SOFTWARE_CONFIG
   NovaCompute0Deploy:
+    DependsOn: [controller0Deployment]
     Type: OS::Heat::StructuredDeployment
     Properties:
       config: {Ref: NovaComputeConfig}
