Export new bootstack keys for cluster init.
These provide a single consistent interface for checking whether
a given node is the bootstrap node, or not the bootstrap node
for database initialisation etc.

Change-Id: I7c5a09cb3477b61c4050e4a47a680ffc9aee97d8

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -361,8 +361,21 @@ Resources:
         admin-token:
           Ref: AdminToken
         bootstack:
+          bootstrap_nodeid:
+            Fn::Select:
+            - 0
+            - Fn::Select:
+              - 0
+              - Merge::Map:
+                  controller0:
+                  - Fn::Select:
+                    - name
+                    - Fn::GetAtt:
+                      - controller0
+                      - show
           public_interface_ip:
             Ref: NeutronPublicInterfaceIP
+          nodeid: {get_input: bootstack_nodeid}
         cinder:
           db: mysql://cinder:unset@localhost/cinder
           volume_size_mb:
@@ -496,6 +509,12 @@ Resources:
       config: {Ref: controllerConfig}
       server: {Ref: controller0}
       input_values:
+        bootstack_nodeid:
+          Fn::Select:
+          - name
+          - Fn::GetAtt:
+            - controller0
+            - show
         controller_host:
           Fn::Select:
             - 0
