--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -154,6 +154,25 @@ Resources:
         Ref: AdminPassword
       admin-token:
         Ref: AdminToken
+      bootstack:
+        bootstrap_nodeid:
+          Fn::Select:
+          - 0
+          - Fn::Select:
+            - 0
+            - Merge::Map:
+                undercloud:
+                - Fn::Select:
+                  - name
+                  - Fn::GetAtt:
+                    - undercloud
+                    - show
+        nodeid:
+          Fn::Select:
+          - name
+          - Fn::GetAtt:
+            - undercloud
+            - show
       controller-address:
         Fn::Select:
           - 0
