Setup SSL for Ceilometer
Establish the Public (SSL) port, 13777, and connect it to the internal port, 8777

Change-Id: I7bba7f8224b6e31fc4f5444eee679ca5a4ce4ebe

--- a/ssl-source.yaml
+++ b/ssl-source.yaml
@@ -49,3 +49,6 @@ Resources:
            - name: 'cinder'
              accept: 13776
              connect: 8776
+           - name: 'ceilometer'
+             accept: 13777
+             connect: 8777
