Move bootstrap-host out from bootstack
We have had a change of opinion and are moving bootstrap_host properties
out of bootstack in order to prevent mysql / rabbit from depending on
boot-stack.

Change-Id: I85399019c5fc448e98362ef832988abc8d9d459d

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -361,6 +361,9 @@ Resources:
         admin-token:
           Ref: AdminToken
         bootstack:
+          public_interface_ip:
+            Ref: NeutronPublicInterfaceIP
+        bootstrap_host:
           bootstrap_nodeid:
             Fn::Select:
             - 0
@@ -373,8 +376,6 @@ Resources:
                     - Fn::GetAtt:
                       - controller0
                       - show
-          public_interface_ip:
-            Ref: NeutronPublicInterfaceIP
           nodeid: {get_input: bootstack_nodeid}
         cinder:
           db: mysql://cinder:unset@localhost/cinder
