--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -154,7 +154,7 @@ Resources:
         Ref: AdminPassword
       admin-token:
         Ref: AdminToken
-      bootstack:
+      bootstrap_host:
         bootstrap_nodeid:
           Fn::Select:
           - 0
