Compute all hosts matrix once
Then feed in through separate deployments. This reduces the exponential
growth of calculating the entire list for every server.

Change-Id: Ib1187eabeb91b46e29ddcf5065056e43a69bb2a0

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -145,10 +145,9 @@ Parameters:
     Type: String
   NeutronEnableTunnelling:
     Type: String
-  StaticHosts:
-    Default: ''
-    Description: Static content to append to /etc/hosts
+  HostsConfig:
     Type: String
+    Description: OS::Heat::Config to use for hosts file deployment
   LiveUpdateUserName:
     Type: String
     Description: The live-update username for the undercloud Glance API.
@@ -202,7 +201,6 @@ Resources:
         glance_host: {Ref: GlanceHost}
         glance_port: {Ref: GlancePort}
         glance_protocol: {Ref: GlanceProtocol}
-        static_hosts: {Ref: StaticHosts}
         keystone_host: {Ref: KeystoneHost}
         neutron_flat_networks: {Ref: NeutronFlatNetworks}
         neutron_host: {Ref: NeutronHost}
@@ -226,6 +224,12 @@ Resources:
         nova_image: {Ref: NovaImage}
         live_update_image_id: {Ref: LiveUpdateComputeImage}
         ntp_server: {Ref: NtpServer}
+  NovaCompute0HostsDeploy:
+    Type: OS::Heat::StructuredDeployment
+    Properties:
+      config: {Ref: HostsConfig}
+      server: {Ref: NovaCompute0}
+      signal_transport: NO_SIGNAL
   NovaCompute0Passthrough:
     Type: OS::Heat::StructuredDeployment
     Properties:
