--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -303,62 +303,12 @@ Resources:
             Ref: HypervisorNeutronPublicInterface
         NeutronBridgeMappings:
             Ref: NeutronBridgeMappings
-        StaticHosts:
-          Fn::Join:
-          - "\n"
-          - - Fn::Join:
-              - "\n"
-              - Merge::Map:
-                  NovaCompute0:
-                    Fn::Join:
-                    - ' '
-                    - - Fn::Select:
-                        - 0
-                        - Fn::Select:
-                          - ctlplane
-                          - Fn::GetAtt:
-                            - NovaCompute0
-                            - networks
-                      - Fn::Select:
-                        - name
-                        - Fn::GetAtt:
-                          - NovaCompute0
-                          - show
-                      - Fn::Join:
-                        - '.'
-                        - - Fn::Select:
-                            - name
-                            - Fn::GetAtt:
-                              - NovaCompute0
-                              - show
-                          - 'novalocal'
-            - Fn::Join:
-              - "\n"
-              - Merge::Map:
-                  controller0:
-                    Fn::Join:
-                    - ' '
-                    - - Fn::Select:
-                        - 0
-                        - Fn::Select:
-                          - ctlplane
-                          - Fn::GetAtt:
-                            - controller0
-                            - networks
-                      - Fn::Select:
-                        - name
-                        - Fn::GetAtt:
-                          - controller0
-                          - show
-                      - Fn::Join:
-                        - '.'
-                        - - Fn::Select:
-                            - name
-                            - Fn::GetAtt:
-                              - controller0
-                              - show
-                          - 'novalocal'
-                      - {Ref: CloudName}
+  NovaCompute0Hosts:
+    Type: FileInclude
+    Path: nova-compute-instance.yaml
+    SubKey: Resources.NovaCompute0HostsDeploy
+    Parameters:
+        HostsConfig: {Ref: allHostsConfig}
   NovaCompute0Passthrough:
     Type: OS::Heat::StructuredDeployment
     Properties:
@@ -440,7 +390,6 @@ Resources:
           watch_server_url: {get_input: heat.watch_server_url}
           metadata_server_url: {get_input: heat.metadata_server_url}
           waitcondition_server_url: {get_input: heat.waitcondition_server_url}
-        hosts: {get_input: hosts}
         keystone:
           db: mysql://keystone:unset@localhost/keystone
           host:
@@ -532,6 +481,12 @@ Resources:
       key_name:
         Ref: KeyName
       user_data_format: SOFTWARE_CONFIG
+  controller0Hosts:
+    Type: OS::Heat::StructuredDeployment
+    Properties:
+      config: {Ref: allHostsConfig}
+      server: {Ref: controller0}
+      signal_transport: NO_SIGNAL
   controller0Deployment:
     Type: OS::Heat::StructuredDeployment
     Properties:
@@ -552,6 +507,8 @@ Resources:
               - Fn::GetAtt:
                 - controller0
                 - networks
+        controller_virtual_ip:
+          {'Fn::Select': [ip_address, 'Fn::Select': [0, 'Fn::GetAtt': [ControlVirtualIP, fixed_ips]]]}
         heat.watch_server_url:
           Fn::Join:
             - ''
@@ -570,6 +527,10 @@ Resources:
             - - 'http://'
               - {'Fn::Select': [ip_address, 'Fn::Select': [0, 'Fn::GetAtt': [ControlVirtualIP, fixed_ips]]]}
               - ':8000/v1/waitcondition'
+  allHostsConfig:
+    Type: OS::Heat::StructuredConfig
+    Properties:
+      config:
         hosts:
           Fn::Join:
           - "\n"
@@ -626,8 +587,6 @@ Resources:
                               - show
                           - 'novalocal'
                       - {Ref: CloudName}
-        controller_virtual_ip:
-          {'Fn::Select': [ip_address, 'Fn::Select': [0, 'Fn::GetAtt': [ControlVirtualIP, fixed_ips]]]}
   controller0SSLDeployment:
     Type: OS::Heat::StructuredDeployment
     Properties:
