Enable multi-node rabbitmq cluster
This causes that:
* rabbit.nodes is list of all control nodes
* rabbit_hosts in OS config files points to all nodes in
  rabbitmq cluster
* overcloud control nodes are joined into cluster

This works both for single or multiple control nodes and it's needed
for scaling out control nodes.

rabbit.nodes property is very similar to generating list of all hosts,
so it uses same StructuredConfig block. This block (and couple of references)
is renamed to allNodesConfig to make it more general.

Related to blueprint tripleo-icehouse-ha-production-configuration

Change-Id: Ice1a34ba7a52c41c1bb0c63350438971c651e7b6

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -77,8 +77,6 @@ Parameters:
     Default: ''
     Description: A port to add to the NeutronPhysicalBridge.
     Type: String
-  RabbitHost:
-    Type: String
   RabbitUserName:
     Type: String
   RabbitPassword:
@@ -145,9 +143,9 @@ Parameters:
     Type: String
   NeutronEnableTunnelling:
     Type: String
-  HostsConfig:
+  AllNodesConfig:
     Type: String
-    Description: OS::Heat::Config to use for hosts file deployment
+    Description: OS::Heat::Config to use for all nodes deployment
   LiveUpdateUserName:
     Type: String
     Description: The live-update username for the undercloud Glance API.
@@ -214,7 +212,6 @@ Resources:
         neutron_public_interface: {Ref: NeutronPublicInterface}
         neutron_password: {Ref: NeutronPassword}
         admin_password: {Ref: AdminPassword}
-        rabbit_host: {Ref: RabbitHost}
         rabbit_username: {Ref: RabbitUserName}
         rabbit_password: {Ref: RabbitPassword}
         live_update_host: {Ref: LiveUpdateHost}
@@ -224,10 +221,10 @@ Resources:
         nova_image: {Ref: NovaImage}
         live_update_image_id: {Ref: LiveUpdateComputeImage}
         ntp_server: {Ref: NtpServer}
-  NovaCompute0HostsDeploy:
+  NovaCompute0AllNodesDeploy:
     Type: OS::Heat::StructuredDeployment
     Properties:
-      config: {Ref: HostsConfig}
+      config: {Ref: AllNodesConfig}
       server: {Ref: NovaCompute0}
       signal_transport: NO_SIGNAL
   NovaCompute0Passthrough:
